[build-system]
requires=["flit"]
build-backend="flit.buildapi"

[tool.flit.metadata]
module="aiohttp_remotes"
# dist-name="aiohttp-remotes"
author="Andrew Svetlov"
author-email="andrew.svetlov@gmail.com"
home-page="https://github.com/aio-libs/aiohttp-remotes"
requires=["aiohttp >= 2.3.0"]
requires-python=">=3.5"
description-file="README.rst"
classifiers=["License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
]


[tool.flit.metadata.urls]
Documentation = "https://aiohttp-remotes.readthedocs.io"