[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module="aiohttp_remotes"
dist-name="aiohttp-remotes"
author="Andrew Svetlov"
author-email="andrew.svetlov@gmail.com"
home-page="https://github.com/aio-libs/aiohttp-remotes"
requires=["aiohttp >= 3.8.1", "typing-extensions >= 3.7.4"]
requires-python=">=3.9"
description-file="README.rst"
classifiers=["License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
]


[tool.flit.metadata.urls]
Documentation = "https://aiohttp-remotes.readthedocs.io"


[tool.towncrier]
package = "aiohttp_remotes"
filename = "CHANGES.rst"
directory = "CHANGES/"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/aio-libs/aiohttp-remotes/issues/{issue}>`_"
